2004-09-17  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* src/check_config.c:
	Add IPPROTO_TCP constant, not defined in AdaSockets.
	Use linker option -lws2_32 in Win32 anyway to link with AdaSockets.

	* aws-net-std__adasockets.adb:
	(Get_Addr_Info): New routine.
	(Bind): Use Get_Addr_Info routine together with Thin.C_Bind.
	 Catch exception only on socket creation.
	(Connect): Use Get_Addr_Info routine together with Thin.C_Connect.
	 Catch exception only on socket creation.
	Dummy call to FreeAddrInfo in the package initialization, for
	 initialize internal libwspiapi.a static data.

2004-09-17  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb, aws-net-std__gnat.adb:
	(Pending): New routine.

2004-09-16  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* src/check_config.c:
	Move here GetAddrInfo and FreeAddrInfo routines from AWS.Net.Thin.
	Add Windows 2000 support.

	* aws-net-std__gnat.adb:
	FreeAddrInfo use Addr_Info_Access parameter now.
	Dummy call to FreeAddrInfo in the package initialization, for
	 initialize internal libwspiapi.a static data.
	Use AWS.OS_Lib.Definitions instead of AWS.Net.Thin.

2004-09-15  Pascal Obry  <pascal@obry.org>

	* aws-net-std__gnat.adb:
	(Raise_Socket_Error): Add code to support GNAT 5.02 and 5.03
	 compilers. Both have a different spec for the routine
	 GNAT.Sockets.Thin.Socket_Error_Message. This fixes AWS build
	 failure on GNAT 5.03, thanks to Ada overloading.
	Minor reformatting.

2004-09-15  Pascal Obry  <pascal@obry.org>

	* aws-net-std__gnat.adb:
	(Raise_Socket_Error): Add missing parameter mode.

2004-09-15  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* src/check_config.c:
	Add comment header for Addr_Info.
	Fix typo in comment.
	(AI_PASSIVE): New constant.
	(AI_CANONNAME): New constant.
	(AI_NUMERICHOST): New constant.
	Add pragma Linker_Options for Win32 platform.

	* aws-net-std__gnat.adb:
	(Get_Inet_Addr): Removed.
	(Get_Addr_Info): New routine.
	(Raise_Socket_Error): New routine.