@@ -1,3 +1,9 @@
+2004-09-19  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* src/check_config.c:
+	(CVS_ID): Define for CVS macro to put the comment to the
+	 generated file.
+
 2004-09-17  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* src/check_config.c:
